--- a/project/src/pages/index.html
+++ b/project/src/pages/index.html
@@ -14,9 +14,7 @@
     <!-- #endregion -->
 
     <!-- #region Styles -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="./../styles/style.css">
+    @@include_once('./components/_global-head.html')
     <!-- #endregion -->
 
 </head>
