--- a/project/src/pages/index.html
+++ b/project/src/pages/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-    <title>Rename me</title>
+    <title>Saturn best</title>
     <!-- * favico -->
     <link rel="icon" href="./../img/favicon.png" type="image/png">
     <!-- #region Meta tags -->
@@ -15,6 +15,7 @@
 
     <!-- #region Styles -->
     @@include_once('./components/_global-head.html')
+    <link rel="stylesheet" href="./../styles/index-style.css">
     <!-- #endregion -->
 
 </head>
@@ -24,10 +25,239 @@
     @@include_once('./components/_header.html')
 
     <main>
-    
-    </main>
+        <section id="first-screen">
+            <div class="container">
+                <div class="row my-5">
+                    <div class="col-md-6 col-12 d-flex flex-column justify-content-center">
+                        <p>от завода производителя</p>
+                        <h1>
+Композитная
+стеклопластиковая
+арматура, сетка
+                        </h1>
+                        <span>Обеспечим быструю доставку партии любого размера</span>
+                        <a href="#" class="red-btn my-5">Заказать</a>
+                    </div>
+                    <div class="col-md-6 col-12 d-none d-lg-block">
+                        <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel" >
+                            <ol class="carousel-indicators">
+                                <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+                                <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+                                <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+                            </ol>
+                            <div class="carousel-inner" >
+                                <div class="carousel-item active" data-interval="1000">
+                                    <img src="./../img/first-screen-1.svg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./../img/first-screen-2.svg" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="./../img/first-screen-3.svg" class="d-block w-100" alt="...">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    @@include_once('./components/_header.html')
+        <section id="why" class="my-lg-5">
+            <div class="container my-2">
+                <div class="row">
+                    <div class="col-12">
+                        <h1>
+                            Почему именно <br>
+                            стеклопластиковая арматура?
+                        </h1>
+                    </div>
+                </div>
+                <div class="row card-container">
+                    <div class="col-4 px-3">
+                        <div class="card my-2">
+                            <div class="d-flex align-self-end">
+                                <div class="card-img p-4">
+                                    <img src="./../img/card-1.svg" alt="" class="img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-text mb-4">
+                                <h3>Низкая цена</h3>
+                                <div class="row">
+                                    <div class="col-8">
+                                        <p>При равнопрочной замене
+                                            металической цене ниже
+                                            в среднем на 60%</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4 px-3">
+                        <div class="card card-inverted my-2">
+                            <div class="d-flex align-self-end">
+                                <div class="card-img p-4">
+                                    <img src="./../img/card-2.svg" alt="" class="img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-text mb-4">
+                                <h3>Срок службы</h3>
+                                <div class="row">
+                                    <div class="col-8">
+                                        <p>За вековой срок службы
+                                        теряет всего 20%
+                                        от изначальных показателей</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4 px-3">
+                        <div class="card my-2">
+                            <div class="d-flex align-self-end">
+                                <div class="card-img p-4">
+                                    <img src="./../img/card-3.svg" alt="" class="img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-text mb-4">
+                                <h3>Стойкось</h3>
+                                <div class="row">
+                                    <div class="col-8">
+                                        <p>Не подвержена внешним
+                                        воздействиям, следовательно
+                                        не коррозирует</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4 px-3">
+                        <div class="card card-inverted my-2">
+                            <div class="d-flex align-self-end">
+                                <div class="card-img p-4">
+                                    <img src="./../img/card-4.svg" alt="" class="img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-text mb-4">
+                                <h3>Монтаж без сварки</h3>
+                                <div class="row">
+                                    <div class="col-8">
+                                        <p>Легко поддаётся резке
+                                        циркулярной пилой
+                                        и связывается проволкой</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4 px-3">
+                        <div class="card card my-2">
+                            <div class="d-flex align-self-end">
+                                <div class="card-img p-4">
+                                    <img src="./../img/card-5.svg" alt="" class="img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-text mb-4">
+                                <h3>Легкость</h3>
+                                <div class="row">
+                                    <div class="col-8">
+                                        <p>В 9 раз легче стальной, это
+                                        сокращает затраты на
+                                        транспортировку</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4 px-3">
+                        <div class="card card-inverted my-2">
+                            <div class="d-flex align-self-end">
+                                <div class="card-img p-4">
+                                    <img src="./../img/card-6.svg" alt="" class="img-fluid">
+                                </div>
+                            </div>
+                            <div class="card-text mb-4">
+                                <h3>Прочность на разрыв</h3>
+                                <div class="row">
+                                    <div class="col-8">
+                                        <p>Выше аналогичных
+                                        показателей стальной
+                                        арматуры в 2,5 раза</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="replacement" class="my-lg-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h1>Таблица равнопрочной замены</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <table class="w-100">
+                            <tr>
+                                <th>Диаметр,<br>
+                                мм</th>
+                                <th>Вес 1 пог. м в кг</th>
+                                <th>Кол-во пог. м в 1 <br> тонне</th>
+                            </tr>
+                            <tr>
+                                <td>Ø4</td>
+                                <td>0,020</td>
+                                <td>38 000</td>
+                            </tr>
+                            <tr>
+                                <td>Ø6</td>
+                                <td>0,045</td>
+                                <td>16 600</td>
+                            </tr>
+                            <tr>
+                                <td>Ø7</td>
+                                <td>0,060</td>
+                                <td>12 500</td>
+                            </tr>
+                            <tr>
+                                <td>Ø8</td>
+                                <td>0,085</td>
+                                <td>10 600</td>
+                            </tr>
+                            <tr>
+                                <td>Ø10</td>
+                                <td>0,135</td>
+                                <td>6 900</td>
+                            </tr>
+                            <tr>
+                                <td>Ø12</td>
+                                <td>0,270</td>
+                                <td>3 500</td>
+                            </tr>
+                            <tr>
+                                <td>Ø14</td>
+                                <td>0,270</td>
+                                <td>3 500</td>
+                            </tr>
+                            <tr>
+                                <td>Ø16</td>
+                                <td>0,350</td>
+                                <td>2 100</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="col-6">
+
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+   
+    @@include_once('./components/_footer.html',)
 
     <!-- #region Scripts -->
 
