--- a/project/src/pages/index.html
+++ b/project/src/pages/index.html
@@ -199,7 +199,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-6 flex-column-reverse d-flex">
                         <table class="w-100">
                             <tr>
                                 <th>Диаметр,<br>
@@ -248,9 +248,58 @@
                                 <td>2 100</td>
                             </tr>
                         </table>
+                        <img src="./../img/table-1.svg" alt="" class="img-fluid w-100 invert-x">
                     </div>
-                    <div class="col-6">
-
+                    <div class="col-6 d-flex flex-column-reverse">
+                        <table class="w-100">
+                            <tr>
+                                <th>Диаметр,<br>
+                                    мм</th>
+                                <th>Вес 1 пог. м в кг</th>
+                                <th>Кол-во пог. м в 1 <br> тонне</th>
+                            </tr>
+                            <tr>
+                                <td>Ø6</td>
+                                <td>0,222</td>
+                                <td>4504</td>
+                            </tr>
+                            <tr>
+                                <td>Ø8</td>
+                                <td>0,40</td>
+                                <td>2 532</td>
+                            </tr>
+                            <tr>
+                                <td>Ø10</td>
+                                <td>0,62</td>
+                                <td>1 621</td>
+                            </tr>
+                            <tr>
+                                <td>Ø12</td>
+                                <td>0,89</td>
+                                <td>1 126</td>
+                            </tr>
+                            <tr>
+                                <td>Ø14</td>
+                                <td>1,21</td>
+                                <td>826</td>
+                            </tr>
+                            <tr>
+                                <td>Ø16</td>
+                                <td>1,47</td>
+                                <td>633</td>
+                            </tr>
+                            <tr>
+                                <td>Ø18</td>
+                                <td>1,58</td>
+                                <td>500</td>
+                            </tr>
+                            <tr>
+                                <td>Ø20</td>
+                                <td>2,00</td>
+                                <td>405</td>
+                            </tr>
+                        </table>
+                        <img src="./../img/table-2.svg" alt="" class="img-fluid w-100 invert-x">
                     </div>
                 </div>
             </div>
