--- a/project/src/pages/index.html
+++ b/project/src/pages/index.html
@@ -73,7 +73,7 @@
                     </div>
                 </div>
                 <div class="row card-container">
-                    <div class="col-4 px-3">
+                    <div class="col-lg-4 col-md-6 col-12 px-3">
                         <div class="card my-2">
                             <div class="d-flex align-self-end">
                                 <div class="card-img p-4">
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4 px-3">
+                    <div class="col-lg-4 col-md-6 col-12 px-3">
                         <div class="card card-inverted my-2">
                             <div class="d-flex align-self-end">
                                 <div class="card-img p-4">
@@ -111,7 +111,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4 px-3">
+                    <div class="col-lg-4 col-md-6 col-12 px-3">
                         <div class="card my-2">
                             <div class="d-flex align-self-end">
                                 <div class="card-img p-4">
@@ -130,7 +130,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4 px-3">
+                    <div class="col-lg-4 col-md-6 col-12 px-3">
                         <div class="card card-inverted my-2">
                             <div class="d-flex align-self-end">
                                 <div class="card-img p-4">
@@ -149,7 +149,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4 px-3">
+                    <div class="col-lg-4 col-md-6 col-12 px-3">
                         <div class="card card my-2">
                             <div class="d-flex align-self-end">
                                 <div class="card-img p-4">
@@ -168,7 +168,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4 px-3">
+                    <div class="col-lg-4 col-md-6 col-12 px-3">
                         <div class="card card-inverted my-2">
                             <div class="d-flex align-self-end">
                                 <div class="card-img p-4">
@@ -199,7 +199,16 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-6 flex-column-reverse d-flex">
+                    <div class="col-md-6 col-12">
+                        <div class="row d-flex justify-content-between my-3">
+                            <div class="col-lg-10 col-12">
+                                <h2>Стеклопластиковая арматура</h2>
+                            </div>
+                            <div class="col-2 d-lg-flex d-none">
+                                <span class="equals">==</span>
+                            </div>
+                        </div>
+                        <img src="./../img/table-1.svg" alt="" class="img-fluid w-100 invert-x">
                         <table class="w-100">
                             <tr>
                                 <th>Диаметр,<br>
@@ -248,9 +257,11 @@
                                 <td>2 100</td>
                             </tr>
                         </table>
-                        <img src="./../img/table-1.svg" alt="" class="img-fluid w-100 invert-x">
                     </div>
-                    <div class="col-6 d-flex flex-column-reverse">
+                    <div class="col-md-6 col-12 ">
+                        <h2 class="my-3">Стальная арматура</h2>
+                        <img src="./../img/table-2.svg" alt="" class="img-fluid w-100 invert-x">
+                        
                         <table class="w-100">
                             <tr>
                                 <th>Диаметр,<br>
@@ -299,7 +310,6 @@
                                 <td>405</td>
                             </tr>
                         </table>
-                        <img src="./../img/table-2.svg" alt="" class="img-fluid w-100 invert-x">
                     </div>
                 </div>
             </div>
