--- a/project/src/pages/index.html
+++ b/project/src/pages/index.html
@@ -35,8 +35,9 @@
                             стеклопластиковая
                             арматура, сетка
                         </h1>
-                        <span>Обеспечим быструю доставку партии любого размера</span>
-                        <a href="#" class="red-btn my-5">Заказать</a>
+                        <span class="my-4">Обеспечим быструю доставку партии любого размера</span>
+                        <a class="nav-link red-btn" href="" data-bs-toggle="modal"
+                    data-bs-target="#modal" class="red-btn my-5">Заказать</a>
                     </div>
                     <div class="col-md-6 col-12 d-none d-lg-block">
                         <div id="carouselExampleIndicators" class="carousel slide carousel-fade"
@@ -494,6 +495,8 @@
         @@include('./components/_blog.html')
 
     </main>
+    
+    @@include('./components/_modal.html')
 
     @@include('./components/_footer.html')
 
