--- a/project/src/pages/price.html
+++ b/project/src/pages/price.html
@@ -28,9 +28,35 @@
     <main>
         @@include('./components/_breadcrums.html')
 
-        <section id="blog" class="galery my-3">
-
+        <section id="price-table">
+            <div class="container my-3">
+                <div class="row">
+                    <div class="col-12 d-flex flex-column">
+                        <div class="table-img">
+                            <img src="./../img/table-1.jpg" alt="" class="img-fluid w-100">
+                        </div>
+                    <div class="table-price d-flex justify-content-center d-flex flex-column align-items-center">
+                        <h1 class="table-header">Прайс композититная арматура</h1>
+                        <img src="./../img/table-1-1.jpg" alt="" class="img-fluid">
+                    </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container my-lg-3">
+                <div class="row">
+                    <div class="col-12 d-flex flex-column">
+                        <div class="table-img">
+                            <img src="./../img/table-2.jpg" alt="" class="img-fluid w-100">
+                        </div>
+                        <div class="table-price d-flex justify-content-center d-flex flex-column align-items-center">
+                            <h1 class="table-header">Прайс композитная сетка</h1>
+                            <img src="./../img/table-2-1.jpg" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
+        @@include('./components/_contuct-us.html',{"title" : "Связаться с нами"})
         @@include('./components/_blog.html')
     </main>
 
