--- a/project/src/pages/index.html
+++ b/project/src/pages/index.html
@@ -39,8 +39,11 @@
                         <a class="nav-link red-btn" href="" data-bs-toggle="modal"
                     data-bs-target="#modal" class="red-btn my-5">Заказать</a>
                     </div>
-                    <div class="col-md-6 col-12 d-none d-lg-block">
-                        <div id="carouselExampleIndicators" class="carousel slide carousel-fade"
+                    <div class="col-md-6 col-12 my-2 order-md-last order-first">
+                        <div class="d-lg-none d-flex m-1">
+                            <img src="./../img/first-screen-1.svg" class="img-fluid" alt="...">
+                        </div>
+                        <div id="carouselExampleIndicators" class="carousel slide carousel-fade d-lg-flex d-none"
                             data-bs-ride="carousel">
                             <ol class="carousel-indicators">
                                 <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active">
@@ -205,7 +208,7 @@
                     <div class="col-md-6 col-12">
                         <div class="row d-flex justify-content-between my-3">
                             <div class="col-lg-10 col-12">
-                                <h2>Стеклопластиковая арматура</h2>
+                                <h2 class="m-0">Стеклопластиковая арматура</h2>
                             </div>
                             <div class="col-2 d-lg-flex d-none">
                                 <span class="equals">==</span>
